# trading-indicator-plugins

./: README.md  pyproject.toml
src/trading_indicator_plugins.egg-info/: PKG-INFO  SOURCES.txt
src/trading_indicators/: __init__.py  backtest.py  base.py  registry.py  sample_data.py
src/trading_indicators/builtin/: __init__.py  bollinger.py  ema.py  macd.py  rsi.py  sma.py
src/trading_indicators/plugins/: __init__.py
tests/: test_backtest.py  test_builtin.py  test_custom_plugin.py  test_registry.py
